# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

arm64_source_local = [
  "libunwind/src/aarch64/Lcreate_addr_space.c",
  "libunwind/src/aarch64/Lget_proc_info.c",
  "libunwind/src/aarch64/Lget_save_loc.c",
  "libunwind/src/aarch64/Lglobal.c",
  "libunwind/src/aarch64/Linit.c",
  "libunwind/src/aarch64/Linit_local.c",
  "libunwind/src/aarch64/Linit_remote.c",
  "libunwind/src/aarch64/Lis_signal_frame.c",
  "libunwind/src/aarch64/Lregs.c",
  "libunwind/src/aarch64/Lresume.c",
  "libunwind/src/aarch64/Lstash_frame.c",
  "libunwind/src/aarch64/Lstep.c",
  "libunwind/src/aarch64/Ltrace.c",
]

arm_source_local = [
  "libunwind/src/arm/Lcreate_addr_space.c",
  "libunwind/src/arm/Lex_tables.c",
  "libunwind/src/arm/Lget_proc_info.c",
  "libunwind/src/arm/Lget_save_loc.c",
  "libunwind/src/arm/Lglobal.c",
  "libunwind/src/arm/Linit.c",
  "libunwind/src/arm/Linit_local.c",
  "libunwind/src/arm/Linit_remote.c",
  "libunwind/src/arm/Los-linux.c",
  "libunwind/src/arm/Lregs.c",
  "libunwind/src/arm/Lresume.c",
  "libunwind/src/arm/Lstash_frame.c",
  "libunwind/src/arm/Lstep.c",
  "libunwind/src/arm/Ltrace.c",
]

riscv64_source_local = [
  "libunwind/src/riscv/Lcreate_addr_space.c",
  "libunwind/src/riscv/Lget_proc_info.c",
  "libunwind/src/riscv/Lget_save_loc.c",
  "libunwind/src/riscv/Lglobal.c",
  "libunwind/src/riscv/Linit.c",
  "libunwind/src/riscv/Linit_local.c",
  "libunwind/src/riscv/Linit_remote.c",
  "libunwind/src/riscv/Lis_signal_frame.c",
  "libunwind/src/riscv/Lreg_states_iterate.c",
  "libunwind/src/riscv/Lregs.c",
  "libunwind/src/riscv/Lresume.c",
  "libunwind/src/riscv/Lstep.c",
]

x64_source_local = [
  "libunwind/src/x86_64/Lcreate_addr_space.c",
  "libunwind/src/x86_64/Lget_proc_info.c",
  "libunwind/src/x86_64/Lget_save_loc.c",
  "libunwind/src/x86_64/Lglobal.c",
  "libunwind/src/x86_64/Linit.c",
  "libunwind/src/x86_64/Linit_local.c",
  "libunwind/src/x86_64/Linit_remote.c",
  "libunwind/src/x86_64/Los-linux.c",
  "libunwind/src/x86_64/Lregs.c",
  "libunwind/src/x86_64/Lresume.c",
  "libunwind/src/x86_64/Lstash_frame.c",
  "libunwind/src/x86_64/Lstep.c",
  "libunwind/src/x86_64/Ltrace.c",
]

libunwind_la_SOURCES_local = [
  "libunwind/src/mi/Ldyn-extract.c",
  "libunwind/src/mi/Lfind_dynamic_proc_info.c",
  "libunwind/src/mi/Lget_proc_info_by_ip.c",
  "libunwind/src/mi/Lget_proc_name.c",
  "libunwind/src/mi/Lput_dynamic_unwind_info.c",
  "libunwind/src/mi/Ldestroy_addr_space.c",
  "libunwind/src/mi/Lget_reg.c",
  "libunwind/src/mi/Lset_reg.c",
  "libunwind/src/mi/Lget_fpreg.c",
  "libunwind/src/mi/Lset_fpreg.c",
  "libunwind/src/mi/Lset_caching_policy.c",
  "libunwind/src/mi/Lset_cache_size.c",
]
